manifests/football-app/football-app-microservice.yaml
kind: Service
apiVersion: v1
metadata:
  labels:
    app: cool-jasmine-microservice-service
    stack: frontend
  name: cool-jasmine-microservice-service
  namespace: default
spec:
  selector:
    source: demo
    app: cool-jasmine-microservice
  ports:
    -   name: web
        protocol: TCP
        port: 30201
        targetPort: 9000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels:
    stack: frontend
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
  name: cool-jasmine-ingress
  namespace: default
spec:
  rules:
    -   http:
          paths:
            -   path: /cool-jasmine(/|$)(.*)
                pathType: Prefix
                backend:
                  service:
                    name: cool-jasmine-microservice-service
                    port:
                      number: 30201
---
kind: Deployment
apiVersion: apps/v1
metadata:
  labels:
    app: cool-jasmine-microservice
    stack: frontend
    source: demo
  name: cool-jasmine-microservice
  namespace: default
spec:
  replicas: 3
  selector:
    matchLabels:
      run: cool-jasmine-microservice
  template:
    metadata:
      labels:
        app: cool-jasmine-microservice
        run: cool-jasmine-microservice
        source: demo
      namespace: default
    spec:
      containers:
        -   image: 219099013464.dkr.ecr.us-west-2.amazonaws.com/advisory-lamp
            name: cool-jasmine-microservice
            ports:
              -   name: web
                  containerPort: 9000
